--- a/package.json
+++ b/package.json
@@ -1,20 +1,51 @@
 {
-  "name": "tonyfresher-com",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.0.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.20",
-    "@types/react": "^17.0.0",
-    "typescript": "^4.1.3"
-  }
+    "name": "tonyfresher-com",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "eslint . --ext=ts,tsx"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{ts,tsx}": "eslint --cache --fix"
+    },
+    "dependencies": {
+        "@bem-react/classname": "^1.5.8",
+        "@types/lodash": "^4.14.167",
+        "gray-matter": "^4.0.2",
+        "lodash": "^4.17.20",
+        "next": "10.0.5",
+        "next-seo": "^4.17.0",
+        "raw-loader": "^4.0.2",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-markdown": "^5.0.3",
+        "react-query": "^3.5.11"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.20",
+        "@types/react": "^17.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.12.0",
+        "@typescript-eslint/parser": "^4.12.0",
+        "eslint": "^7.17.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-airbnb-typescript": "^12.0.0",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "husky": "^4.3.7",
+        "lint-staged": "^10.5.3",
+        "prettier": "^2.2.1",
+        "typescript": "^4.1.3"
+    }
 }
