--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/no-unused-vars": "error",
         "@typescript-eslint/no-use-before-define": "off",
+        "@typescript-eslint/require-await": "warn",
         "react/prop-types": "off",
         "react/react-in-jsx-scope": "off",
         "react/require-default-props": "off"
