--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     },
     "dependencies": {
         "@bem-react/classname": "^1.5.8",
-        "@types/lodash": "^4.14.167",
         "gray-matter": "^4.0.2",
         "lodash": "^4.17.20",
         "next": "10.0.5",
@@ -26,10 +25,11 @@
         "raw-loader": "^4.0.2",
         "react": "17.0.1",
         "react-dom": "17.0.1",
-        "react-markdown": "^5.0.3",
-        "react-query": "^3.5.11"
+        "react-markdown": "^5.0.3"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.167",
+        "@types/webpack-env": "^1.16.0",
         "@types/node": "^14.14.20",
         "@types/react": "^17.0.0",
         "@typescript-eslint/eslint-plugin": "^4.12.0",
