--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
             "components/*": ["components/*"],
             "hooks/*": ["hooks/*"],
             "types": ["types"],
-            "utils/*": ["utils/*"]
+            "styles/*": ["styles/*"],
+            "lib/*": ["lib/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
