--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "raw-loader": "^4.0.2",
         "react": "17.0.1",
         "react-dom": "17.0.1",
-        "react-markdown": "^5.0.3"
+        "react-markdown": "^5.0.3",
+        "react-yandex-metrika": "^2.6.0"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.167",
