Rewire main page

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,10 @@
         "project": "./tsconfig.json"
     },
     "rules": {
+        "no-irregular-whitespace": [
+            "error",
+            {"skipStrings": true, "skipTemplates": true}
+        ],
         "import/prefer-default-export": "off",
         "@typescript-eslint/ban-types": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
