--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
         "*.{ts,tsx}": "eslint --cache --fix"
     },
     "dependencies": {
-        "@bem-react/classname": "^1.5.8",
-        "gray-matter": "^4.0.2",
+        "@bem-react/classname": "^1.5.12",
+        "gray-matter": "^4.0.3",
         "lodash": "^4.17.21",
-        "next": "12.1.6",
-        "next-seo": "^4.17.0",
+        "next": "^12.1.6",
+        "next-seo": "^5.4.0",
         "raw-loader": "^4.0.2",
-        "react": "17.0.1",
-        "react-dom": "17.0.1",
-        "react-markdown": "^5.0.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-markdown": "^8.0.3",
         "react-yandex-metrika": "^2.6.0"
     },
     "devDependencies": {
@@ -47,6 +47,6 @@
         "husky": "^4.3.7",
         "lint-staged": "^10.5.3",
         "prettier": "^2.2.1",
-        "typescript": "^4.1.3"
+        "typescript": "^4.7.4"
     }
 }
