--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "dependencies": {
         "@bem-react/classname": "^1.5.12",
         "@mdx-js/react": "^2.3.0",
-        "@next/mdx": "^13.2.4",
+        "@next/mdx": "^13.4.12",
         "lodash": "^4.17.21",
         "next": "13.2.4",
         "next-seo": "^5.15.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-yandex-metrika": "^2.6.0"
+        "react-yandex-metrika": "^2.6.0",
+        "remark-gfm": "^3.0.1"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.167",
