--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "tonyfresher-com",
     "version": "1.0.0",
     "private": true,
+    "engines": {
+        "node": ">=20"
+    },
     "scripts": {
         "dev": "next dev",
         "build": "next build",
