--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
         ]
     },
     "dependencies": {
+        "@mdx-js/loader": "^3.1.1",
         "@mdx-js/react": "^2.3.0",
-        "@next/mdx": "^13.4.12",
+        "@next/mdx": "^13.5.11",
+        "@types/mdx": "^2.0.13",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lodash": "^4.17.21",
@@ -49,11 +51,13 @@
         "eslint": "^9",
         "eslint-config-next": "15.5.4",
         "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-mdx": "^3.6.2",
         "husky": "^9.1.7",
         "lint-staged": "^16.2.1",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "tailwindcss": "^4",
+        "tw-animate-css": "^1.3.7",
         "typescript": "^5"
     }
 }
