--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,10 @@
             "@/*": ["./src/*"]
         }
     },
+    "mdx": {
+        "checkMdx": true,
+        "plugins": ["remark-gfm"]
+    },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
     "exclude": ["node_modules"]
 }
