--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
         "deps": "npm install && husky install"
     },
     "lint-staged": {
-        "*.{js,jsx,ts,tsx}": [
+        "*.{js,jsx,ts,tsx,md,mdx}": [
             "eslint --fix",
             "prettier --write"
         ],
-        "*.{json,md,yml,yaml}": [
+        "*.{json,yml,yaml}": [
             "prettier --write"
         ]
     },
