--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         ]
     },
     "dependencies": {
+        "@mdx-js/loader": "^3.1.1",
+        "@mdx-js/mdx": "^3.1.1",
         "@mdx-js/react": "^3.1.1",
         "@next/mdx": "^15.5.4",
         "@types/mdx": "^2.0.13",
@@ -33,6 +35,8 @@
         "lodash": "^4.17.21",
         "next": "^15.5.2",
         "next-themes": "^0.4.6",
+        "posthog-js": "^1.268.8",
+        "posthog-node": "^5.9.2",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "remark-gfm": "^3.0.1",
