--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
         "@mdx-js/mdx": "^3.1.1",
         "@mdx-js/react": "^3.1.1",
         "@next/mdx": "^15.5.4",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-slot": "^1.2.3",
         "@types/mdx": "^2.0.13",
+        "@untitledui/icons": "^0.0.19",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lodash": "^4.17.21",
@@ -40,7 +44,8 @@
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "remark-gfm": "^3.0.1",
-        "tailwind-merge": "^3.3.1"
+        "tailwind-merge": "^3.3.1",
+        "vaul": "^1.1.2"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
@@ -59,7 +64,7 @@
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "tailwindcss": "^4",
-        "tw-animate-css": "^1.3.7",
+        "tw-animate-css": "^1.4.0",
         "typescript": "^5"
     }
 }
