--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "react-dom": "^19.1.1",
         "remark-gfm": "^3.0.1",
         "tailwind-merge": "^3.3.1",
+        "use-sound": "^5.0.0",
         "vaul": "^1.1.2"
     },
     "devDependencies": {
