--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "posthog-node": "^5.9.2",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
+        "rehype-slug": "^6.0.0",
         "remark-gfm": "^3.0.1",
         "tailwind-merge": "^3.3.1",
         "use-sound": "^5.0.0",
