--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lodash": "^4.17.21",
+        "motion": "^12.23.24",
         "next": "^15.5.2",
         "next-themes": "^0.4.6",
         "posthog-js": "^1.268.8",
         "posthog-node": "^5.9.2",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
+        "react-use-measure": "^2.1.7",
         "rehype-slug": "^6.0.0",
         "remark-gfm": "^3.0.1",
         "tailwind-merge": "^3.3.1",
